Preenchimento do campo Amt do RMA