@@ -13,11 +13,10 @@
  *****************************************************************************/
 package org.kenos.idempiere.lbr.nfe.zk.form;
 
-import static org.compiere.model.SystemIDs.COLUMN_C_INVOICE_C_BPARTNER_ID;
-
 import java.util.Vector;
 import java.util.logging.Level;
 
+import org.adempiere.webui.ClientInfo;
 import org.adempiere.webui.apps.AEnv;
 import org.adempiere.webui.apps.form.WCreateFromWindow;
 import org.adempiere.webui.component.Grid;
@@ -35,12 +34,13 @@ import org.adempiere.webui.util.ZKUpdateUtil;
 import org.compiere.model.GridTab;
 import org.compiere.model.MLookup;
 import org.compiere.model.MLookupFactory;
+
+import static org.compiere.model.SystemIDs.*;
+
 import org.compiere.util.CLogger;
 import org.compiere.util.DisplayType;
 import org.compiere.util.Env;
 import org.compiere.util.Msg;
-import org.zkoss.zul.Borderlayout;
-import org.zkoss.zul.Center;
 
 public class WCreateFromRMAUI extends CreateFromRMA implements ValueChangeListener
 {
@@ -104,25 +104,24 @@ public class WCreateFromRMAUI extends CreateFromRMA implements ValueChangeListen
 	{
 		bPartnerLabel.setText(Msg.getElement(Env.getCtx(), "C_BPartner_ID"));
         
-		Borderlayout parameterLayout = new Borderlayout();
-		ZKUpdateUtil.setHeight(parameterLayout, "110px");
-		ZKUpdateUtil.setWidth(parameterLayout, "100%");
     	Panel parameterPanel = window.getParameterPanel();
-		parameterPanel.appendChild(parameterLayout);
 		
 		Grid parameterStdLayout = GridFactory.newGridLayout();
     	Panel parameterStdPanel = new Panel();
 		parameterStdPanel.appendChild(parameterStdLayout);
 
-		Center center = new Center();
-		parameterLayout.appendChild(center);
-		center.appendChild(parameterStdPanel);
+		parameterPanel.appendChild(parameterStdPanel);
+		ZKUpdateUtil.setVflex(parameterStdLayout, "min");
 		
 		Rows rows = (Rows) parameterStdLayout.newRows();
 		Row row = rows.newRow();
 		row.appendChild(bPartnerLabel.rightAlign());
 		if (bPartnerField != null)
 			row.appendChild(bPartnerField.getComponent());
+		
+		if (ClientInfo.isMobile()) {
+			ClientInfo.onClientInfo(window, this::onClientInfo);
+		}
 	}
 	
 	/**
@@ -154,7 +153,7 @@ public class WCreateFromRMAUI extends CreateFromRMA implements ValueChangeListen
 		bPartnerField = new WSearchEditor ("C_BPartner_ID", true, false, true, lookup);
 		//
 		int C_BPartner_ID = Env.getContextAsInt(Env.getCtx(), p_WindowNo, "C_BPartner_ID");
-		bPartnerField.setValue(new Integer(C_BPartner_ID));
+		bPartnerField.setValue(Integer.valueOf(C_BPartner_ID));
 	}   //  initBPartner
 	
 	protected void loadRMA()
@@ -194,5 +193,11 @@ public class WCreateFromRMAUI extends CreateFromRMA implements ValueChangeListen
 	@Override
 	public Object getWindow() {
 		return window;
+	}
+	
+	protected void onClientInfo() {
+		ZKUpdateUtil.setCSSHeight(window);
+		ZKUpdateUtil.setCSSWidth(window);
+		window.invalidate();
 	}
 }
